# visual_servo_tracker

./: .gitignore  NOTICE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  requirements-basler.txt  requirements.txt
configs/: basler_sample.yaml  default.yaml  offline_sample.yaml
data/: README.md
docs/: architecture.md  data_format.md  reproducibility.md  setup.md
scripts/: cleanup_third_party_git.ps1  run_offline.ps1  run_sample_video_tracking.ps1  run_tracking_video.ps1
src/visual_servo_tracker/: __init__.py  cli.py  config.py
src/visual_servo_tracker/dataset_prep/: crop_common.py  crop_fixed.py  crop_free.py  synth_assets.py
src/visual_servo_tracker/jacobian_modeling/: __init__.py  build.py  evaluate.py  optimize.py
src/visual_servo_tracker/tools/: __init__.py  grayscale.py  image_diff.py
src/visual_servo_tracker/tracking_runtime/: __init__.py  basler_tracker.py  video_tracker.py
tests/smoke/: test_cli_help.py  test_jacobian_shape.py  test_offline_minimal.py  test_video_tracker_prediction.py
