[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-servo-tracker"
version = "0.1.0"
description = "Refactored visual servo tracking pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Daigo Lab" }]
dependencies = []

[project.scripts]
visual-servo = "visual_servo_tracker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
